# dictation

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pipeline.rs  pipeline_test.rs
src-tauri/src/audio/: capture.rs  mod.rs  vad.rs
src-tauri/src/audio/capture/: tests.rs
src-tauri/src/audio/vad/: tests.rs
src-tauri/src/cleanup/: mod.rs  tests.rs
src-tauri/src/cleanup/cloud_llm/: mod.rs  tests.rs
src-tauri/src/cleanup/local_llm/: mod.rs  tests.rs
src-tauri/src/cleanup/rules/: mod.rs  tests.rs
src-tauri/src/hotkey/: mod.rs  tests.rs
src-tauri/src/injection/: clipboard.rs  keyboard.rs  mod.rs  tests.rs
src-tauri/src/settings/: store.rs
src-tauri/src/stt/: mod.rs  models.rs  whisper.rs
src-tauri/src/stt/models/: tests.rs
src-tauri/src/stt/whisper/: tests.rs
src-tauri/src/tray/: mod.rs
src/components/onboarding/: FirstDictationStep.tsx  HotkeyStep.tsx  MicrophoneStep.tsx  Onboarding.tsx  TrayStep.tsx  WelcomeStep.tsx
src/components/pill/: Pill.tsx  PillGlow.tsx  PillWaveform.tsx  usePillPosition.ts  usePillState.ts
src/hooks/: useSettings.ts
src/types/: index.ts
standards/domains/: code-internal-architecture.md
tasks/: prd-dictation-mvp-v1.md  rsd-desktop-framework-v1.md  rsd-dictation-app-v1.md  rsd-dictation-ui-ux-v1.md  rsd-voice-dictation-app-v1.md  tasks-dictation-mvp.md
(+8 files in other folders)
