[package]
name = "dictation-app"
version = "0.1.0"
description = "A cross-platform voice-to-text dictation app"
authors = ["you"]
edition = "2021"

[lib]
name = "dictation_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Audio capture
cpal = "0.15"

# Speech-to-text
whisper-rs = "0.13"

# Voice activity detection (ONNX Runtime)
ort = "2.0.0-rc.11"

# Text injection
arboard = "3"
enigo = "0.3"

# Credential storage
keyring = "3"

# HTTP client (for cloud LLM APIs and model downloads)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Text cleanup (rule-based)
regex = "1"

# Local LLM cleanup (optional)
llama-cpp-2 = { version = "0.1", optional = true }

[features]
default = []
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
local-llm = ["dep:llama-cpp-2"]
